# ods-ci

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .robocop  .snyk  .sonarcloud.properties  CONTRIBUTING.md  Dockerfile.konflux  README.md  infrastructure_configuration.yaml.example  interactive_console_output.xml  kubeconfig-test  launch.many.sh  obh_upgrade_kubeconfig  openshift_ca.crt  pylintrc  pyproject.toml  requirements-dev.txt  robotidy.toml  run_robot_test.sh  setup.py  test-variables.yml.example
.github/: pull_request_template.md  release.yml
.github/workflows/: black.yaml  code_quality.yaml  comment.yml  dry_run.yml  dry_run_robot.yaml  release-branch-to-image.yml  shrunners.yml
.tekton/: cluster-health-pipeline-kf.yaml  cluster-health-pipeline.yaml  cluster-provision.yaml  rhoai-health-pull-request.yaml  rhoai-health-push.yaml
configs/resources/: basic_config.yaml  custom_image.yaml  oauth_htp_idp.json  oauth_ldap_idp.json
configs/templates/: ca-rolebinding.yaml
configs/templates/ldap/: ldap.yaml
docs/: PLATFORM_GATEWAY_SERVICE_TOKEN_AUTH.md  check-code-style.md  full_readme.txt  infrastructure_configuration_variables.md
drivers/centos/: chromedriver
libs/: Helpers.py
ods_ci/: CONTRIBUTING.md  Dockerfile  LICENSE  PIPE  TRUE  YES  infrastructure_configuration.yaml.example  mysql_link  openshift_ca.crt  pyrightconfig.json  rhods_install_configuration.yaml.example  robotidy.toml  run_interop.sh  run_robot_test.sh  run_sealights.sh  test-variables-odh-overwrite.yml  test-variables.yml.example
ods_ci/certs/: domain.crt  domain.key  model-registry-db.crt  model-registry-db.csr  model-registry-db.key  modelregistry-sample-grpc.domain.crt  modelregistry-sample-grpc.domain.csr  modelregistry-sample-grpc.domain.ext  modelregistry-sample-grpc.domain.key  modelregistry-sample-rest.domain.crt  modelregistry-sample-rest.domain.csr  modelregistry-sample-rest.domain.ext  modelregistry-sample-rest.domain.key
ods_ci/configs/resources/: oauth_htp_idp.json
ods_ci/configs/templates/: openid.json  user_config.json
ods_ci/docs/: ODS-CI-IMAGE-README.md  RUN_ARGUMENTS.md  check-code-style.md  infrastructure_configuration_variables.md  ods-ci_pod.yaml  ods-ci_pod_oc_idp.yaml  ods-ci_pod_ocm_idp.yaml  ods-ci_pod_with_postfix.yaml  ods-ci_rbac.yaml  release.md
ods_ci/libs/: CaikitPythonClient.py  DataSciencePipelinesAPI.py  DataSciencePipelinesKfp.py  DataSciencePipelinesKfpTekton.py  Helpers.py
ods_ci/selftests/: __init__.py  conftest.py  docker_utils.py  test_run_robot_test.py
ods_ci/tasks/Resources/: RedHatMarketplace.resource
ods_ci/tasks/Tasks/: codeflare_olm.robot  data_science_cluster.robot  olm.robot  operator_rearch.robot  patch_dsc_cr_operatorv2.robot  provision_self_managed_cluster.robot  rh_marketplace.robot  rhods_olm.robot
ods_ci/tests/Resources/: Common.robot  OCP.resource  ODS.robot  RHOSi.resource  ServiceMesh.resource
ods_ci/utils/scripts/: SplitSuite.py  arch_detection_example.py  arch_utils.py  awsOps.py  clean_watsonx.sh  detect_rc.py  fetch_tests.py  generate-wildcard-certs.sh  logger.py  read_pr.py  util.py
results/: log.html  output.xml  report.html
tasks/Resources/: RedHatMarketplace.resource  Script.robot  Tasks.resource
tasks/Resources/Documentation/: Documentation.robot  generate_documentation.sh
tasks/Resources/SERH_OLM/: install.resource  install.robot
tasks/Tasks/: RedHatMarketplace.robot  deploy_managed_starburst.robot  provision_aws_cluster.robot  provision_self_managed_cluster.robot  rh_marketplace.robot  rhods-groups-config.robot  rhods_olm.robot  tasks-generate-documentation.robot
test-selection/: rhods-1.19.robot
tests/: read_pr.py
tests/Resources/: Common.robot  OCP.resource  ODHVariables.resource  ODS.robot  RHODSVariables.resource  RHOSi.resource  RHOSiSecurity.resource
tests/Resources/Files/: AppsInfoDictionary.json  AppsInfoDictionary_latest.json  CustomAppInfoDictionary.json  custom_app.yaml  custom_doc_howto.yaml  custom_doc_tutorial.yaml  custom_quickstart.yaml  uninstall-model-serving.sh
tests/Resources/Page/: JupyterHubDashboard.robot  JupyterHubSpawner.robot  LaunchJupyterHub.robot  LaunchPython3.robot  LoginJupyterHub.robot  LoginPage.robot  ODHDashboard.robot
tests/Tests/: image-iteration.robot  test-dashboard.robot  test-installation.robot  test-jupyterlab-git-notebook.robot  test-jupyterlab-notebook-generic-smoke.robot  test-jupyterlab-notebook.robot  test-minimal-image.robot  test-uninstall.robot  test.robot
tests/Tests/000_dashboard/: 000_dashboard.robot
tests/Tests/00__Installation/: 00__test-installation.robot  10__test-uninstall.robot
tests/Tests/30__Jupyter/: 00__test.robot  10__test-jupyterlab-notebook.robot  20__test-jupyterlab-git-notebook.robot  30__test-minimal-image.robot
tests/Tests/400__ods_dashboard/: 400__ods_dashboard.robot  410__ods_dashboard_settings.robot  411__ods_dashboard_settings_pvc_size.robot  412__ods_dashboard_resources.robot  413__ods_dashboard_settings_pod_tolerations.robot  413__ods_dashboard_user_mgmt.robot  414__ods_dashboard_api.robot  415__ods_custom_docs.robot  415__ods_dashboard_projects.robot  415__ods_dashboard_settings_pod_tolerations.robot  420__ods_resource_page.robot  adminUITest.robot
tests/Tests/400_ods_dashboard/: 400_ods_dashboard.robot  400_ods_dashboard_auth.robot
tests/Tests/500__jupyterhub/: autoscaling-gpus.robot  base-user-shutdown-test.robot  culler.robot  custom-image.robot  image-iteration.robot  jupyterhub-basic-auth.robot  jupyterhub-user-access.robot  long-running-test-generic-ds.robot  minimal-cuda-test.robot  minimal-pytorch-test.robot  minimal-tensorflow-test.robot  multiple-gpus.robot  networkpolicy-test.robot  notebook_size_verification.robot  odh_jh_global_profile.sh  plugin-verifiation.robot  plugin-verification.robot  pvc-change_verification.robot  special-user-testing.robot  temp.robot  test-filling-pvc.robot  test-folder-permissions.robot  test-jupyterhub-api-telemetry.robot  test-jupyterlab-cpu-stresstest.robot  test-uninstall.robot  (+12 more)
utils/scripts/: SplitSuite.py  SplitSuiteOrig.py  logger.py  util.py
(+1137 files in other folders)
