[tool.poetry]
name = "ods-ci"
version = "0.1.0"
description = "Robot Framework test suites for Red Hat OpenShift Data Science"
authors = ["RHODS QE <ods-qe@redhat.com>"]
readme = "README.md"
packages = [{include = "ods_ci"}]

[tool.poetry.dependencies]
python = "^3.8.1"
reportportal-client = "^5.2.5"
robotframework = "^6"
robotframework-debuglibrary = ">=2.0.0"
robotframework-requests = "^0.9.4"
robotframework-seleniumlibrary = "^6.1.1"
# Selenium has been releasing versions prone to breaking, let's pin to a single release
selenium = "4.13.0"
robotframework-jupyterlibrary = "^0.4.0"
robotframework-openshift = {git = "https://git@github.com/red-hat-data-services/robotframework-openshift.git"}
pytest = "^7.2.1"
pytest-logger = "^0.5.1"
Pygments = "^2.14.0"
requests = "^2.28.2"
escapism = "^1.0.1"
semver = "^2"
rpaframework = "^27.2.0"
pexpect = "^4.8.0"
python-openstackclient = "^6.2.0"
awscli = "^1.27.100"
kfp-tekton = "==1.5.9"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
robotframework-lsp = ">=1.11.0"
robotframework-robocop = "^4.1.0"
robotframework-tidy = "^4.5.0"
black = ">20.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
